assets/scss/styles.scss
:root {
  --primary-color: #45f1a6;
  --primary-color-light: #2ea370;
  --nav-sidebar-width: 200px;
  --nav-sidebar-offset: 40px;
}

/* Main */
body {
  font: 16px sans-serif;
  color: black;
  text-rendering: optimizeLegibility;
  padding: 2rem;
  max-width: 100%;
  margin: 0px;
  padding: 0px;
  background-color: white;
  line-height: 25px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

h1,
h2,
h3,
h4 {
  color: var(--primary-color);
}

h1 {
  font-size: 45px;
  text-transform: capitalize;
  display: none;
}

h2 {
  font-size: 30px;
  text-transform: capitalize;
}

h3 {
  font-size: 20px;
  text-transform: capitalize;
}

h4 {
  font-size: 15px;
  text-transform: capitalize;
}

q {
  font-size: 20px;
  max-width: 500px;
  display: block;
  margin-left: 30px;
}

pre {
  font-family: monospace;
  background: black;
  color: white;
  padding: 15px;
  border-radius: 2px;
  overflow-x: auto;
}

pre > code {
  display: block;
  text-indent: 0;
  white-space: inherit;
  font-weight: normal;
}

code {
  font-family: monospace;
  font-size: 12px;
  background: black;
  color: white;
  padding: 2px 5px;
  white-space: pre;
  border-radius: 2px;
  font-weight: bold;
  display: inline-block;
  line-height: 16px;
}

code comment {
  color: #777;
}

code.button {
  background: white;
  color: black;
  font-size: smaller;
  display: inline-block;
  padding: 0px 6px;
  font-weight: bold;
  border-radius: 2px;
  line-height: 22px;
}

a[href*="#"] {
  text-decoration: none;
}

/* Navigation Menu */
nav.menu {
  float: left;
  padding: 45px;
  max-width: var(--nav-sidebar-width);
  line-height: 22px;
  margin-top: -2px;
}

nav .site-nav {
  margin: 20px 0 20px 0;
  display: block;
}

nav .site-nav section {
  float: left;
  margin-top: -2px;
}

nav .site-nav section h2 {
  margin: 20px 0 20px 0;
  font-size: 24px;
  text-transform: lowercase;
}

nav.menu details summary {
  margin-bottom: 30px;
}

@media (max-width: 1100px) {
  nav.menu {
    width: 100%;
    max-width: 100%;
  }
}

nav.menu ul {
  padding: 0px 10px 10px 0px;
  margin: 0px;
  list-style-type: none;
  line-height: 22px;
}

/* Header, main and footer */
main {
  padding: 45px;
  max-width: 700px;
  float: left;
}

main > ul {
  line-height: 25px;
  margin: 0;
}

main > ul > li > a {
  text-decoration: underline;
}

.dual-list > ul {
  columns: 2;
}

.single-list > ul {
  columns: 2;
}

#TableOfContents > ul > li > a {
  text-decoration: underline;
}

#TableOfContents > ul {
  columns: 2;
  line-height: 20px;
}

#TableOfContents li {
  list-style-type: decimal-leading-zero;
  list-style-position: inside;
  text-transform: capitalize;
}

.notice {
  padding: 20px;
  border: 2px solid black;
}

main > blockquote {
  padding: 20px;
  border: 2px solid black;
}

main > * {
  max-width: 600px;
  margin-bottom: 30px;
}

header {
  padding: 45px;
  border-bottom: 1px solid #222;
}

header a img {
  filter: invert(0);
}

header h1 {
  display: inline;
}

footer {
  margin-top: auto;
  padding: 45px;
  clear: both;
}

nav .site-nav ul li {
  list-style-type: none;
  display: flex;
  font-variant-numeric: tabular-nums;
}

li:has(input[type="checkbox"]) {
  display: block;
  list-style-type: none;
}

ul:has(li input[type="checkbox"]) {
  padding: 0px;
}

section > ul li a {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: calc(var(--nav-sidebar-width) + var(--nav-sidebar-offset));
}

ul li {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

ul li a:hover {
  white-space: nowrap;
  width: 100%;
  z-index: 10;
}

time {
  padding-right: 1rem;
}

blockquote {
  margin: 1em 0;
  padding: 0 2em;
  border-left: 3px solid #eee;
}

img {
  max-width: 100%;
}

a,
a:visited {
  color: black;
}

/* Theme */
@media (prefers-color-scheme: dark) {
  a,
  a:visited {
    color: white;
  }

  body {
    background: #000;
    color: white;
  }

  header a img {
    filter: invert(1);
  }

  body a {
    color: white;
  }

  pre {
    background: white;
    color: #000;
  }

  code {
    background: white;
    color: #000;
  }

  body select {
    color: black;
    background-color: white;
  }

  .project {
    border-left: 2px solid white;
  }

  .notice {
    border-color: white;
  }

  .mono {
    filter: invert(1);
  }

  .progress > div {
    background-color: white;
  }

  .progress > div > span {
    color: black;
  }

  main > blockquote {
    border-color: white;
  }

  ul li a {
    background-color: black;
  }

  ul {
    background-color: black;
  }
}

@media (prefers-color-scheme: light) {
  h1,
  h2,
  h3,
  h4 {
    color: var(--primary-color-light);
  }
}

/* Mobile */

@media (max-width: 1100px) {
  nav {
    width: 100%;
  }

  nav .site-nav section {
    float: left;
    margin: 0 10px 10px 0;
  }
}

@media (max-width: 1100px) and (min-width: 651px) {
  nav .site-nav section {
    width: calc(25% - 10px);
  }

  nav .site-nav section:nth-child(4n + 1) {
    clear: left;
  }
}

@media (max-width: 650px) and (min-width: 501px) {
  nav .site-nav section {
    width: calc(33% - 10px);
  }

  nav .site-nav section:nth-child(3n + 1) {
    clear: left;
  }
}

@media (max-width: 500px) and (min-width: 351px) {
  nav .site-nav section {
    width: calc(50% - 10px);
  }

  nav .site-nav section:nth-child(2n + 1) {
    clear: left;
  }
}

@media (max-width: 350px) {
  nav .site-nav section {
    width: 100%;
  }
}

